# par

./: .gitignore  .travis.yml  README.md  aliases.sh  par_bluenoise.h  par_bubbles.h  par_camera_control.h  par_easings.h  par_easycurl.h  par_filecache.h  par_msquares.h  par_octasphere.h  par_shaders.h  par_shape.h  par_shapes.h  par_sprune.h  par_streamlines.h  par_string_blocks.h  par_triangle.h
libgen/: CMakeLists.txt  msquares.c  shapes.c
test/: CMakeLists.txt  assertion-macros.h  boxes.py  describe.h  flare.json  gen_rgb_png.py  getcolors.py  hierarchy.py  lz4.cpp  msquares.html  packd3.html  par_asset.h  sds.c  sds.h  test_bluenoise.c  test_bubbles.c  test_c.c  test_cpp.cpp  test_filecache.c  test_filecache_lz4.c  test_linkage.c  test_linkage.cpp  test_msquares.c  test_octasphere.cpp  test_shapes.c  test_sprune.c  test_strings.cpp  test_triangle.c  whereami.c
tools/: .uncrustify  aliases.sh  format.py
